--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,14 +1,16 @@
 <header class="header">
-    <div class="header-content">
-        <h1 class="logo">Tu Logo</h1>
-        <nav class="navigation">
-            <ul>
-                <li><a routerLink="/">Inicio</a></li>
-                <li><a routerLink="/gestion-ordenes">Gestión de Órdenes</a></li>
-                <li><a routerLink="/gestion-infraestructura">Gestión Infraestructura</a></li>
-                <li><a routerLink="/gestion-operarios">Gestión Operarios</a></li>
-                <li><a routerLink="/login">Iniciar Sesión</a></li>
-            </ul>
-        </nav>
-    </div>
+  <div class="header-content">
+      <div class="logo">
+        <img src="/public/assets/LogoUTN_nvgsb.png" alt="Logo" class="logo-image">
+      </div>
+      <nav class="navigation">
+          <ul>
+              <li><a routerLink="/">Inicio</a></li>
+              <li><a routerLink="/gestion-ordenes">Gestión de Órdenes</a></li>
+              <li><a routerLink="/gestion-infraestructura">Gestión Infraestructura</a></li>
+              <li><a routerLink="/gestion-operarios">Gestión Operarios</a></li>
+              <li><a routerLink="/login">Iniciar Sesión</a></li>
+          </ul>
+      </nav>
+  </div>
 </header>
